--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="./chefialogo.jpg"><title>Chefia Burguer</title><script defer="defer" src="/Chefia/js/chunk-vendors.0bc620fb.js"></script><script defer="defer" src="/Chefia/js/app.e71762f7.js"></script><link href="/Chefia/css/app.fe7089d9.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but chefiaburguer doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="./chefialogo.jpg" />
+    <title>Chefia Burguer</title>
+    <script defer="defer" src="js/chunk-vendors.0bc620fb.js"></script>
+    <script defer="defer" src="js/app.213af112.js"></script>
+    <link href="css/app.fe7089d9.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but chefiaburguer doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+  </body>
+</html>
